--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:tools="http://schemas.android.com/tools"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+        xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/layout">
     <data>
         <variable
-                name = "activityHistoryViewModel"
+                name="activityHistoryViewModel"
                 type="com.tapp.safepof.ActivityHistoryViewModel"/>
     </data>
 
@@ -14,25 +14,36 @@
 
         <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="0dp"
-                android:layout_height="0dp" android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toTopOf="@+id/back_button" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_height="0dp"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                android:id="@+id/activity_history_list"/>
+                android:id="@+id/activity_history_list"
+                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/back_button"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
 
         <Button
                 android:text="@string/back_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/back_button"
-                android:layout_marginBottom="16dp"
+                android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 style="@style/button"
                 app:layout_constraintEnd_toEndOf="@+id/activity_history_list"
                 android:layout_marginStart="8dp"
                 app:layout_constraintStart_toStartOf="@+id/activity_history_list"
-                android:layout_marginEnd="8dp"/>
+                android:layout_marginEnd="8dp"
+        />
+        <TextView
+                android:text="@string/history"
+                android:textColor="@color/dark_blue"
+                android:textAllCaps="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
