--- a/app/src/main/res/layout/create_account.xml
+++ b/app/src/main/res/layout/create_account.xml
@@ -26,7 +26,7 @@
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                 android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/account_imageview"
-                app:layout_constraintVertical_bias="0.95"/>
+                app:layout_constraintVertical_bias="0.9"/>
 
         <TextView
                 android:text="@string/password_not_match"
@@ -90,8 +90,10 @@
                 android:layout_height="48dp" app:srcCompat="@drawable/account"
                 android:id="@+id/account_imageview" android:layout_marginEnd="8dp"
                 app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp" app:layout_constraintBottom_toTopOf="@+id/password_not_match_text"
-                android:layout_marginBottom="16dp"/>
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.80"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
