--- a/app/src/main/res/layout/finance_tracker.xml
+++ b/app/src/main/res/layout/finance_tracker.xml
@@ -53,7 +53,22 @@
                 app:layout_constraintTop_toBottomOf="@+id/deposit_textview"
                 app:layout_constraintEnd_toEndOf="@+id/deposit_textview"
                 appayout_constraintStart_toStartOf="@+id/deposit_textview"
-                app:layout_constraintStart_toStartOf="@+id/deposit_textview"/>
+                app:layout_constraintStart_toStartOf="@+id/deposit_textview" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toTopOf="@+id/purpose_edittext" app:layout_constraintVertical_bias="0.40"/>
+
+        <EditText
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:visibility="invisible"
+                android:textSize="18sp"
+                android:hint="@string/purpose"
+                android:ems="10"
+                android:id="@+id/purpose_edittext"
+                app:layout_constraintStart_toStartOf="@+id/deposit_textview"
+                app:layout_constraintEnd_toEndOf="@+id/deposit_textview" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.475"/>
 
         <EditText
                 android:layout_width="0dp"
@@ -70,23 +85,9 @@
                 android:visibility="invisible"
                 android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/done_image"/>
 
-        <EditText
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:inputType="textPersonName"
-                android:visibility="invisible"
-                android:textSize="18sp"
-                android:hint="@string/purpose"
-                android:ems="10"
-                android:id="@+id/purpose_edittext"
-                app:layout_constraintStart_toStartOf="@+id/deposit_textview"
-                android:layout_marginTop="24dp"
-                app:layout_constraintTop_toBottomOf="@+id/tap_prompt"
-                app:layout_constraintEnd_toEndOf="@+id/deposit_textview"/>
-
         <ImageView
-                android:layout_width="72dp"
-                android:layout_height="72dp"
+                android:layout_width="72sp"
+                android:layout_height="72sp"
                 app:srcCompat="@drawable/minus_button_blue"
                 android:id="@+id/minus_button"
                 android:onClick="@{() -> financeTrackerViewModel.onClickModifyButton(1)}"
@@ -95,24 +96,23 @@
                 android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="8dp"/>
         <ImageView
-                android:layout_width="72dp"
-                android:layout_height="72dp"
+                android:layout_width="72sp"
+                android:layout_height="72sp"
                 app:srcCompat="@drawable/add_button_orange"
                 android:id="@+id/add_button"
                 android:onClick="@{() -> financeTrackerViewModel.onClickModifyButton(0)}"
                 android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/minus_button" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/transaction_amount_edit_text" app:layout_constraintVertical_bias="0.13"/>
+                app:layout_constraintTop_toBottomOf="@+id/transaction_amount_edit_text"
+                app:layout_constraintVertical_bias="0.13"/>
 
         <ImageView
-                android:layout_width="72dp"
-                android:layout_height="80dp" app:srcCompat="@drawable/log"
+                android:layout_width="72sp"
+                android:layout_height="72sp" app:srcCompat="@drawable/log"
                 android:id="@+id/logImage"
-                android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/minus_button" android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/transaction_amount_edit_text"
-                app:layout_constraintVertical_bias="0.10"/>
+                app:layout_constraintStart_toEndOf="@+id/minus_button" android:layout_marginStart="8dp"
+                app:layout_constraintTop_toTopOf="@+id/minus_button"
+                app:layout_constraintBottom_toBottomOf="@+id/minus_button"/>
         <ImageView
                 android:layout_width="40sp"
                 android:layout_height="40sp" app:srcCompat="@drawable/send"
