--- a/app/src/main/res/layout/forget_password.xml
+++ b/app/src/main/res/layout/forget_password.xml
@@ -25,7 +25,7 @@
                 app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
                 android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/password_imageview"
-                app:layout_constraintVertical_bias="0.95"/>
+                app:layout_constraintVertical_bias="0.90"/>
 
         <TextView
                 android:text="@string/password_not_match"
@@ -87,9 +87,12 @@
         <ImageView
                 android:layout_width="48dp"
                 android:layout_height="48dp" app:srcCompat="@drawable/password"
-                android:id="@+id/password_imageview" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                android:id="@+id/password_imageview" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"
                 app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
-                app:layout_constraintBottom_toTopOf="@+id/password_not_match_text" android:layout_marginBottom="16dp"/>
+                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.8"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
